...
                                <rect key="frame" x="20" y="332.33333333333331" width="374" height="38"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <rect key="frame" x="20" y="420.33333333333331" width="374" height="38"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="21"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Required" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TQZ-hH-hb6">
                                <rect key="frame" x="20" y="145" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password Required" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jrL-gU-sfg">
                                <rect key="frame" x="20" y="258" width="374" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name Required" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9bH-6q-Hry">
                                                <rect key="frame" x="0.0" y="62" width="374" height="34"/>
                                                <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
...
                                <rect key="frame" x="20" y="371" width="374" height="36"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                <state key="normal" title="Sign Out">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <items>
                                    <navigationItem title="Title" id="buC-1F-kaZ">
                                        <barButtonItem key="rightBarButtonItem" title="Delete" image="trash" catalog="system" id="QN9-iV-Zh8">
                                            <connections>
                                                <action selector="tapDeleteButton:" destination="NfR-gQ-XsK" id="rlV-XA-OAZ"/>
...
