...
    }
    
    internal func showErrorMessage(message: String) {
        
        let refreshAlert = UIAlertController(title: "Error Message", message: message, preferredStyle: UIAlertController.Style.alert)
        
        refreshAlert.addAction(UIAlertAction(title: "Ok", style: .default, handler: { (action: UIAlertAction!) in
            
        }))
        present(refreshAlert, animated: true, completion: nil)
    }
}

